<resources>
    <string name="app_name">IDoroshevApp</string>
    <string name="action_settings">Settings</string>
    <string name="my_name_surname">Igor Doroshev</string>
    <string name="my_github_link" translatable="false">https://github.com/idoroshev</string>
    <string name="next">NEXT</string>
    <string name="welcome">Welcome</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="default_layout">Default layout</string>
    <string name="dense_layout">Dense layout</string>
    <string name="default_portrait_icons">Portrait: 4 icons in row</string>
    <string name="default_landscape_icons">Landscape: 6 icons in row</string>
    <string name="dense_portrait_icons">Portrait: 5 icons in row</string>
    <string name="dense_landscape_icons">Landscape: 7 icons in row</string>
    <string name="delete_this_item">Delete this item?</string>
    <string name="yes">YES</string>
    <string name="is_default_layout" translatable="false">isDefaultLayout</string>
    <string name="launcher_activity" translatable="false">LauncherActivity</string>
    <string name="added_new_item" translatable="false">Added new item: </string>
    <string name="list_activity" translatable="false">ListActivity</string>
    <string name="launcher_adapter" translatable="false">LauncherAdapter</string>
    <string name="deleted_item" translatable="false">Deleted item: </string>
    <string name="position" translatable="false">position </string>
    <string name="color" translatable="false">color </string>
    <string name="action_click" translatable="false">action click</string>
    <string name="new_snackbar_being_shown" translatable="false">new snackbar being shown</string>
    <string name="call_to_dismiss" translatable="false">call to dismiss()</string>
    <string name="swipe" translatable="false">swipe</string>
    <string name="timeout" translatable="false">timeout</string>
    <string name="unknown" translatable="false">unknown</string>
    <string name="snackbar_dismissed" translatable="false">Snackbar dismissed. </string>
    <string name="cause" translatable="false">Cause: </string>
    <string name="list_adapter" translatable="false">ListAdapter</string>
    <string name="layout">Layout</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>

    <string name="theme">Theme</string>
    <string name="show_welcome_page_title">Show welcome page</string>
    <string name="show_welcome_page_summary">Show welcome page for next time</string>
    <string name="layout_key" translatable="false">layout</string>
    <string name="theme_key" translatable="false">theme</string>
    <string name="welcome_page_key" translatable="false">welcome_page</string>
    <string name="delete">Delete</string>
    <string name="launched">Launched: </string>

    <string name="insert" translatable="false">insert</string>
    <string name="update" translatable="false">update</string>
    <string name="get" translatable="false">get</string>
    <string name="remove" translatable="false">remove</string>
    <string name="clear" translatable="false">clear</string>
    <string name="failed_to" translatable="false">failed to</string>
    <string name="or" translatable="false">or</string>
    <string name="info">Info</string>

    <string name="without_sort">Without sorting</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="reverse_alphabetical">Reverse alphabetical</string>
    <string name="installation_date">By installation date</string>
    <string name="by_frequency">By frequency</string>
    <string name="short_app_name" translatable="false">IDoroshev</string>
    <string name="get_started">Get started!</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="sorting_type">Sorting type</string>
    <string name="choose_sorting_type">Choose sorting type for your apps</string>

    <string name="mobile_number" translatable="false">375–29–231–25–58</string>
    <string name="mobile">Mobile</string>
    <string name="home_number" translatable="false">36-85-57</string>
    <string name="home">Home</string>
    <string name="github" translatable="false">Github</string>
    <string name="email_address" translatable="false">iloveyandex@yandex.ru</string>
    <string name="email">Email</string>
    <string name="my_address" translatable="false">Oktyabrskaya, 10</string>
    <string name="address">Address</string>
    <string name="my_vk" translatable="false">id157765201</string>
    <string name="vk" translatable="false">VK</string>
    <string name="my_telegram" translatable="false">\@idoroshev</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="app_added" translatable="false">App added</string>
    <string name="app_deleted" translatable="false">App deleted</string>

    <string name="background_change_frequency_key" translatable="false">background_change_frequency</string>
    <string name="sorting_type_key" translatable="false">sorting_type</string>
    <string name="update_background_key" translatable="false">update_background</string>

    <string name="background_change_frequency">Background change frequency</string>
    <string name="minutes_15">15 minutes</string>
    <string name="hour_1">1 hour</string>
    <string name="hours_8">8 hours</string>
    <string name="hours_24">24 hours</string>
    <string name="update_background_now">Update background now</string>
    <string name="delete_from_desktop">Delete from desktop</string>
    <string name="add_to_desktop">Add to Desktop</string>
    <string name="screen">Screen</string>
    <string name="desktop">Desktop</string>
    <string name="applications">Applications</string>
    <string name="already_on_desktop">App has already on desktop</string>
</resources>
