<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  tools:showIn="@layout/activity_settings_nav_view">

    <ListPreference
        android:key="@string/layout_key"
        android:title="@string/layout"
        android:defaultValue="0"
        android:entries="@array/layout_entries"
        android:entryValues="@array/layout_values" />

    <ListPreference
        android:key="@string/theme_key"
        android:title="@string/theme"
        android:defaultValue="0"
        android:entries="@array/theme_entries"
        android:entryValues="@array/theme_values" />

    <SwitchPreference
        android:key="@string/welcome_page_key"
        android:title="@string/show_welcome_page_title"
        android:summary="@string/show_welcome_page_summary"
        android:defaultValue="false"/>

    <ListPreference
        android:key="sorting_type"
        android:title="Sorting type"
        android:summary="Choose sorting type for your apps"
        android:defaultValue="0"
        android:entries="@array/sorting_entries"
        android:entryValues="@array/sorting_values"/>



</PreferenceScreen>