<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">


    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/screen">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_desktop"
                    android:title="@string/desktop"
                    android:checked="true"/>
                <item
                    android:id="@+id/nav_apps"
                    android:title="@string/applications" />
            </group>
        </menu>
    </item>

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/layout">
        <menu>
            <group>
            <item
                android:id="@+id/nav_grid"
                android:icon="@drawable/ic_menu_grid"
                android:title="@string/grid_layout" />
            <item
                android:id="@+id/nav_list"
                android:icon="@drawable/ic_menu_list"
                android:title="@string/linear_layout" />
            </group>
        </menu>
    </item>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />
    </group>

</menu>
